--- a/exercicios/026/style.css
+++ b/exercicios/026/style.css
@@ -4,6 +4,7 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     height: 100vh;
     
 }
